--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MaticPro",
+  "name": "maticpro",
   "version": "1.0.0",
   "description": "Software educativo \r realizado por los siguientes integrantes:\r - Fraider Causil\r - Karla Ferrer\r - Veronica Gutierrez\r - Juan Madera",
   "main": "index.js",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/JuanMadera/MaticPro/issues"
   },
-  "homepage": "https://github.com/JuanMadera/MaticPro#readme"
+  "homepage": "https://github.com/JuanMadera/MaticPro#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4"
+  }
 }
