--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JuanMadera/MaticPro#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "nodemon": "^2.0.19"
   }
 }
